# drori_ppmi_prep

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/drori_ppmi_prep/: build_analysis_dir.py  dicom_conversion.py  extend_metadata_from_dicom.py  metadata_builder.py  run_analysis_dir_builder.py  run_full_ppmi_pipeline.py  run_metadata_builder.py  run_nii_conversion.py  run_synthstrip_native.py  run_t1_space_registrations.py  synthstrip_utils.py
src/drori_ppmi_prep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/drori_ppmi_prep/analysis/: __init__.py  dataset_builder.py  mrgrad.py  roi_stats.py
src/drori_ppmi_prep/cli/: build_analysis.py  build_infrastructure.py  build_metadata.py  check_outputs.py  convert_dicoms.py  download_massp.py  general_dicom_to_nifti.py  general_erode_labels.py  general_label_mask.py  general_massp.py  register_to_t1.py  run_dbsegment.py  run_first.py  run_freesurfer.py  run_massp.py  run_pipeline.py  run_session.py  run_synthseg.py
src/drori_ppmi_prep/conversion/: __init__.py  dicom_to_nifti.py
src/drori_ppmi_prep/metadata/: __init__.py  dicom_enrichment.py
src/drori_ppmi_prep/pipeline/: full.py  infrastructure.py  session.py
src/drori_ppmi_prep/preprocessing/: __init__.py  bias_correction.py  native_synthstrip.py
src/drori_ppmi_prep/registration/: __init__.py  flirt.py  t1_space.py
src/drori_ppmi_prep/segmentation/: dbsegment.py  directory_builder.py  first.py  freesurfer.py  fsl_first.py  fslfirst.py  massp.py  run_all_segmentations.py  synthseg.py  utils.py
tests/: test_dbsegment.py  test_metadata_builder.py  test_roi_stats.py  test_segmentation_utils.py
