[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drori_ppmi_prep"
version = "0.1.0"
description = "PPMI DICOM to NIfTI conversion tools"
requires-python = ">=3.8"

[project.scripts]
drori-ppmi-build-infrastructure = "drori_ppmi_prep.cli.build_infrastructure:main"
drori-ppmi-run-session = "drori_ppmi_prep.cli.run_session:main"

drori-ppmi-convert = "drori_ppmi_prep.cli.convert_dicoms:main"
drori-ppmi-build-metadata = "drori_ppmi_prep.cli.build_metadata:main"
drori-ppmi-build-analysis = "drori_ppmi_prep.cli.build_analysis:main"
drori-ppmi-register-to-t1 = "drori_ppmi_prep.cli.register_to_t1:main"
drori-ppmi-run-first = "drori_ppmi_prep.cli.run_first:main"
drori-ppmi-run-freesurfer = "drori_ppmi_prep.cli.run_freesurfer:main"
drori-ppmi-run-dbsegment = "drori_ppmi_prep.cli.run_dbsegment:main"
drori-ppmi-check-dbsegment = "drori_ppmi_prep.cli.check_dbsegment_outputs:main"
drori-ppmi-check-outputs = "drori_ppmi_prep.cli.check_outputs:main"
drori-ppmi-run-pipeline = "drori_ppmi_prep.cli.run_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
