[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drori_ppmi_prep"
version = "0.1.0"
description = "PPMI DICOM to NIfTI conversion tools"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "nibabel",
    "numpy",
    "scipy",
    "pydicom",
    "mri-unbias @ git+https://github.com/MezerLab/mri_unbias.git#subdirectory=python",
]

[project.scripts]
drori-ppmi-build-infrastructure = "drori_ppmi_prep.cli.build_infrastructure:main"
drori-ppmi-run-session = "drori_ppmi_prep.cli.run_session:main"

drori-ppmi-convert = "drori_ppmi_prep.cli.convert_dicoms:main"
drori-ppmi-build-metadata = "drori_ppmi_prep.cli.build_metadata:main"
drori-ppmi-build-cohort-tables = "drori_ppmi_prep.cli.build_cohort_tables:main"
drori-ppmi-build-analysis = "drori_ppmi_prep.cli.build_analysis:main"
drori-ppmi-register-to-t1 = "drori_ppmi_prep.cli.register_to_t1:main"
drori-ppmi-run-first = "drori_ppmi_prep.cli.run_first:main"
drori-ppmi-run-synthseg = "drori_ppmi_prep.cli.run_synthseg:main"
drori-ppmi-run-massp = "drori_ppmi_prep.cli.run_massp:main"
drori-ppmi-download-massp = "drori_ppmi_prep.cli.download_massp:main"
drori-ppmi-run-freesurfer = "drori_ppmi_prep.cli.run_freesurfer:main"
drori-ppmi-run-dbsegment = "drori_ppmi_prep.cli.run_dbsegment:main"
drori-ppmi-check-outputs = "drori_ppmi_prep.cli.check_outputs:main"
drori-ppmi-run-pipeline = "drori_ppmi_prep.cli.run_pipeline:main"
drori-ppmi-run-mrgrad = "drori_ppmi_prep.cli.run_mrgrad:main"
drori-ppmi-run-roi-stats = "drori_ppmi_prep.cli.run_roi_stats:main"
drori-synthstrip = "drori_ppmi_prep.cli.general_synthstrip:main"
drori-fslfirst = "drori_ppmi_prep.cli.general_fslfirst:main"
drori-dbsegment = "drori_ppmi_prep.cli.general_dbsegment:main"
drori-synthseg = "drori_ppmi_prep.cli.general_synthseg:main"
drori-freesurfer = "drori_ppmi_prep.cli.general_freesurfer:main"
drori-massp = "drori_ppmi_prep.cli.general_massp:main"
drori-mri-unbias = "drori_ppmi_prep.cli.general_mri_unbias:main"
drori-dicom-to-nifti = "drori_ppmi_prep.cli.general_dicom_to_nifti:main"
drori-erode-labels = "drori_ppmi_prep.cli.general_erode_labels:main"
drori-label-mask = "drori_ppmi_prep.cli.general_label_mask:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drori_ppmi_prep = ["analysis/mrgrad_presets/*.json"]
